# studyappp1

./: .dockerignore  .gitignore  .rooignore  .trufflehog-exclude.txt  AILog.md  BLUEPRINT.md  DOCTRINE.md  PROJECT_OVERVIEW.md  README.md  RELEASE_NOTES_v0.1.0.md  THE_FINAL_JUDGEMENT.md  THE_FINAL_JUDGEMENT_v3.md  doc_id.txt  doc_upload.json  docker-compose.local.override.yml  docker-compose.override.yml  docker-compose.yml  doclist.json  docs.json  document_id.txt  doppler.yaml  e2e_diff_run.sh  e2e_insight_diffs.sh  email.txt  llm_test.patch  package.json  parse_docid.js  parse_docid.py  parse_status.js  parse_status.py  parse_subject.js  parse_subject.py  pass.txt  payload.json  pnpm-lock.yaml  pnpm-workspace.yaml  project_manifest.jsonl  pyproject.toml  pytest.ini  seed.txt  (+14 more)
.github/workflows/: ci.yml  docker-publish.yml  insight-diffs-ci.yml  production-ci.yml  python-tests.yml
.tripwire/: fake-secret.txt
.venv-oracle/: pyvenv.cfg
.windsurf/rules/: blueprint.md  doctrine.md  projectoverview.md
apps/: docker-compose.prod.yml
apps/client/: README.md  next.config.mjs  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/client/.next/: app-build-manifest.json  build-manifest.json  postcss.js  prerender-manifest.json  trace
apps/client/e2e/: ai-consent-flow.spec.ts  client-journey.spec.ts  dashboard-tabs-and-actions.spec.ts  enlightenment.spec.ts  global-search.spec.ts  helpers.ts  notes-editor.spec.ts  semantic-search.spec.ts  sidebar-behavior.spec.ts
apps/client/test-results/: .last-run.json  consent-before-1760909093476.json
apps/core-service/: .env.example  Dockerfile  README.md  package.json
apps/core-service/prisma/: .gitignore  schema.prisma  seed.ts
apps/core-service/scripts/: backfill-notelinks.ts  benchmark-notes-graph.ts
apps/core-service/src/: app.module.ts  main.ts
apps/core-service/test/: app.e2e-spec.ts  auth.e2e-spec.ts  documents.e2e-spec.ts  full-system.e2e-spec.ts  global-search.e2e-spec.ts  health.e2e-spec.ts  internal-reindex.e2e-spec.ts  internal.e2e-spec.ts  jest-e2e.json  malware.clamav.e2e-spec.ts  notes.e2e-spec.ts  phase1.e2e-spec.ts  search.e2e-spec.ts  subjects-throttle.e2e-spec.ts  subjects.e2e-spec.ts  topics.e2e-spec.ts  workspace.e2e-spec.ts
apps/oracle-service/: .dockerignore  .env.example  Dockerfile  README.md  celery_app.py  config.py  health_server.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
apps/oracle-service/app/: __init__.py  embed_server.py
apps/oracle-service/tests/: test_adversarial_real_tfidf.py  test_analysis_enrichment_payload.py  test_compute_diffs_unit.py  test_concept_graph_modes.py  test_concept_graph_taxonomy.py  test_concept_graph_weighting_and_gaps.py  test_diff_golden.py  test_health_server.py  test_insight_diffs_and_synth.py  test_insight_diffs_integration.py  test_insight_payload_archetypes_evidence.py  test_insight_payload_warnings.py  test_insight_session_worker.py  test_insight_template_warnings.py  test_internal_api.py  test_internal_api_hmac.py  test_librarian_modes.py  test_meta_callback.py  test_pdf_text.py  test_pdf_text_force.py  test_providers.py  test_redaction.py  test_structure_exam_template.py  test_tfidf.py  test_topics_worker.py  test_v2_worker_integration.py  test_worker_forceocr_integration.py  test_worker_integration.py
docs/: insight-diffs-ux.md  insight-diffs.md
scripts/: container_upload.mjs  e2e.sh  e2e_consent_gate.sh  e2e_diffs.sh  e2e_insight.sh  pipeline.sh
sparke-study-flow-37-main/: README.md  index.html  tailwind.config.ts
sparke-study-flow-37-main/src/: App.tsx  index.css
tests/: test_sanity.py  test_smoke.py
tools/: LLM_TEST.txt  make_manifest.py  normalize_imports.py  normalize_imports_verbose.py
(+577 files in other folders)
